# sudoku_mastery

./: .auth.env  .go_websocket.env  .mailer.env  .sudoku.env  docker-compose.yaml  nginx.conf  readme.md
auth_service/: .dockerignore  .env.development  .eslintignore  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.dev  Jenkinsfile  docker-compose.yaml  jest.config.js  nodemon.json  package-lock.json  package.json  tsconfig.json
auth_service/cert/: publickey.crt
auth_service/helm/: Chart.yaml  values.yaml
auth_service/src/: app.ts  index.ts  redis.ts
cert/: nginx.crt  nginx.csr  nginx.key
cert/nginx_cert/: nginx.crt
frontend_react/: .env  .eslintignore  .gitattributes  .gitignore  Dockerfile  babel.config.js  jest.config.js  nginx.conf  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
frontend_react/.storybook/: main.ts  preview.tsx
frontend_react/config/: env.js  styled.js  webpack.config.js
frontend_react/public/: index.html
frontend_react/scripts/: build.js  start.js  test_script.js
frontend_react/src/: react-app-env.d.ts
go_websocket/: Dockerfile  compose.yaml  go.mod  go.sum  test_ws.html
go_websocket/src/: cert.go  client.go  hub.go  hub_test.go  jwt.go  main.go  room.go  room_test.go
mailer/: .gitignore  Dockerfile  compose.yaml  dependency-reduced-pom.xml  pom.xml
neural_network_trainer/: package-lock.json  package.json  tsconfig.json
neural_network_trainer/scripts/: updateDatasetNames.js
neural_network_trainer/src/: data copy.ts  data.ts  datasetExport.ts  index.ts  testDatasetExport.ts
sudoku_service/: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile copy  Dockerfile copy 2  build.rs  compose.yaml  readme.md  sqlx-data.json  types.d.ts
sudoku_service/cert/: keypair.pem
sudoku_service/fuzz/: Cargo.toml
sudoku_service/fuzz/fuzz_targets/: api_sudoku_post.rs
sudoku_service/migrations/: 20240220224059_users.up.sql  20240220224135_sudokus.down.sql  20240220224135_sudokus.up.sql
sudoku_service/src/: configuration.rs  kafka copy.rs  kafka.rs  lib.rs  main copy.rs  main.rs  metric.rs  metrics.rs  startup.rs  test_utils.rs
sudoku_service/src/auth/: errors.rs  middleware.rs  mod.rs  utoipa.rs
sudoku_service/src/controllers/: sudoku.rs
sudoku_service/src/database/: mod.rs
sudoku_service/src/middleware/: auth_middleware copy.rs  auth_middleware.rs  jwt_auth.rs  mod.rs
sudoku_service/src/models/: api.rs  mod.rs  sudoku.rs  user.rs  user_token.rs
sudoku_service/src/proto/auth/v1/: auth.device.added_to_user.proto  auth.device.detected_not_approved.proto  auth.device_and_network_address.detected_not_approved.proto  auth.network_address.added_to_user.proto  auth.network_address.detected_not_approved.proto  auth.user.changed_password.proto  auth.user.created.proto  auth.user.created_not_activated.proto  auth.user.email_is_already_registered.proto  auth.user.requested_new_password.proto  auth.user.updated.proto
sudoku_service/src/proto_constants/auth/: v1.rs
sudoku_service/src/routes/: metrics.rs
sudoku_service/src/routes/sudoku/: apidoc.rs  delete_id.rs  errors.rs  get.rs  get_id.rs  get_random.rs  mod.rs  post.rs  put.rs  service.rs  test_utils.rs
sudoku_service/src/utils/: env.rs  mod.rs  token_utils.rs
sudoku_wasm/: .gitignore  Cargo.toml  README.md
sudoku_wasm/benches/: fixed.rs
sudoku_wasm/flamegraphs/: Trace-20240324T204124.json  tarpaulin-report.html
sudoku_wasm/src/: approximate_polygon_dp.rs  constants.rs  contours.rs  gray_image.rs  lib.rs  macros.rs  point.rs  polygon.rs  rendering_engine.rs  solve.rs  warp.rs
terraform/: kubernetes.tf
terraform/data/: aws_cloudwatch_event_rule_sudoku.org-ASGLifecycle_event_pattern  aws_cloudwatch_event_rule_sudoku.org-InstanceScheduledChange_event_pattern  aws_cloudwatch_event_rule_sudoku.org-InstanceStateChange_event_pattern  aws_cloudwatch_event_rule_sudoku.org-SpotInterruption_event_pattern  aws_iam_role_policy_additional.nodes.sudoku.org_policy  aws_iam_role_policy_masters.sudoku.org_policy  aws_iam_role_policy_nodes.sudoku.org_policy  aws_key_pair_kubernetes.sudoku.org-78a031403714e9858fa8fb039d055112_public_key  aws_launch_template_master-eu-west-2a.masters.sudoku.org_user_data  aws_launch_template_nodes-eu-west-2a.sudoku.org_user_data  aws_launch_template_spot-eu-west-2a.sudoku.org_user_data  aws_s3_object_cluster-completed.spec_content  aws_s3_object_etcd-cluster-spec-events_content  aws_sqs_queue_boostics-tech-nth_policy  (+14 more)
(+969 files in other folders)
