[package]
name = "sudoku_service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"]}
dotenv = "0.15.0"
once_cell = "1.18.0"
serde = {version = "1.0.183",features = ["derive"]}
serde_json = "1.0.104"
tsync = "2.0.0"
utoipa = {version = "4.1.0",features = ["actix_extras", "chrono", "openapi_extensions", "uuid"]}
utoipa-swagger-ui = { version="6.0.0", features=["actix-web","debug-embed"]}
uuid = { version = "1.4.1", features = ["serde", "v4","std"] }
sudoku = "0.8.0"
prost = "0.12.3"
prost-types = "0.12.3"
futures-util = "0.3.30"
# tracing = {version = "0.1.40", features = ["max_level_debug","release_max_level_warn"]}
tracing = {version = "0.1.40", features = []}
tracing-subscriber = {version = "0.3.18", features = ["env-filter","std"]}
jsonwebtoken = {version = "9.2.0", features = ["use_pem"]}
anyhow = "1.0.79"
secrecy = {version="0.8.0",features = ["serde"]}
# https://github.com/launchbadge/sqlx/issues/2567
sqlx = { version="0.6.3", features=["postgres","uuid","time","macros","chrono","runtime-actix-rustls", "offline"]}
futures = "0.3.30"
env_logger = "0.11.2"
console-subscriber = "0.2.0"
actix-web-prom = "0.8.0"
actix-cors = "0.7.0"
rdkafka = "0.36.2"
tokio = "1.37.0"

[build-dependencies]
prost-build = { version = "0.12.3" }

[build]
rustflags = ["-Z", "macro-backtrace"]

# [profile.dev]
# openapi = true

# [profile.release]
# lto = true
# codegen-units = 1
# strip = true
# panic = "abort"
