[package]
name = "sudoku_service-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
libfuzzer-sys = "0.4"
tokio = "1.32.0"

[dependencies.sudoku_service]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "api_sudoku_post"
path = "fuzz_targets/api_sudoku_post.rs"
test = false
doc = false
